--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ font-family: "Noto Sans CJK SC";
     background-color: rgb(197 241 244 / 10%);
     border-radius: 8px;
     margin-top: 4px;
+    margin-bottom: 2px;
     color: #bab99e;
     padding: 6px;
   }
