--- a/styles-hanyu7.css
+++ b/styles-hanyu7.css
@@ -14,6 +14,7 @@ font-family: "Noto Sans CJK SC", sans-serif;
   font-size: 1.1em;
   vertical-align: bottom;
   margin-right: 6px;
+  margin-bottom: 2px;
 }
 [data-sc-hanyu7="trad"] {
   display: inline-block;
@@ -25,6 +26,7 @@ font-family: "Noto Sans CJK SC", sans-serif;
   padding: 4px;
   font-size: 1.1em;
   vertical-align: bottom;
+  margin-bottom: 2px;
 }
 [data-sc-hanyu7="ps"] {
   display: inline-block;
