--- a/styles-hanyu7-pinyin.css
+++ b/styles-hanyu7-pinyin.css
@@ -27,6 +27,7 @@
   padding: 4px;
   font-size: 1.1em;
   vertical-align: bottom;
+  font-family: "Noto Serif CJK TC", sans-serif;
 }
 [data-sc-hanyu7="ps"] {
   display: inline-block;
