improved headword font display when exported to anki

--- a/styles-hanyu7-pinyin.css
+++ b/styles-hanyu7-pinyin.css
@@ -16,6 +16,7 @@
   font-size: 1.1em;
   margin-right: 6px;
   vertical-align: bottom;
+  font-family: "Noto Sans CJK SC", sans-serif;
 }
 [data-sc-hanyu7="trad"] {
   display: inline-block;
