--- a/styles-guifan.css
+++ b/styles-guifan.css
@@ -13,6 +13,7 @@
   font-size: 1.1em;
   margin-right: 6px;
   vertical-align: bottom;
+  font-family: "Noto Sans CJK SC", sans-serif;
 }
 [data-sc-guifan="trad"] {
   display: inline-block;
