[Guifan, Hanyu7] fixed the previous commit

--- a/styles-guifan-zhuyin.css
+++ b/styles-guifan-zhuyin.css
@@ -127,3 +127,7 @@ a {
 [data-sc-guifan="dd"][data-sc-class="x-ext1"] {
   margin-left: -0.6em;
 }
+
+[data-sc-guifan="reading-pinyin"] {
+  display: none;
+}
