--- a/styles-guifan.css
+++ b/styles-guifan.css
@@ -58,15 +58,15 @@
   color: #629a61;
 }
 [data-sc-class="collapse"] {
-  display: block;
+  display: inline-block;
   [data-sc-class="x-lb"] {
-    text-decoration: underline;
-    text-decoration-style: dashed;
-    text-underline-offset: 3px;
     color: #b1b11f;
   }
-  [data-sc-class="t-note"] {
-    display: block;
+  [data-sc-class="x-lb"]::after {
+    content: "：";
+  }
+  [data-sc-class="unbox"] {
+    display: inline-block;
     background-color: rgb(197 241 244 / 10%);
     border-radius: 8px;
     margin-top: 4px;
